Fix spacing issue with text columns layout

--- a/wp-content/themes/swapps/assets/styles/components/_two-lines.scss
+++ b/wp-content/themes/swapps/assets/styles/components/_two-lines.scss
@@ -1,6 +1,6 @@
 .two-lines{
 
-  &__block{
+  &__block:not(:last-child){
     margin-bottom: 60px;
   }
   &__text{
